Refactoring of authentication service due to complexity